--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.vincent</groupId>
 	<artifactId>password_manager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>password_manager</name>
 	<description>Password Manager system</description>
 	<properties>
